--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "ejs": "~2.6.1",
+    "ejs": "^2.6.2",
     "express": "~4.16.1",
     "express-partials": "^0.3.0",
     "http-errors": "~1.6.3",
+    "method-override": "^3.0.0",
     "morgan": "~1.9.1",
+    "sequelize": "^5.21.2",
     "serve-favicon": "^2.5.0",
+    "sqlite3": "^4.1.0",
     "supervisor": "^0.12.0"
   }
 }
