--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "express": "~4.16.1",
     "express-partials": "^0.3.0",
     "http-errors": "~1.6.3",
+    "method-override": "^3.0.0",
     "morgan": "~1.9.1",
+    "sequelize": "^5.9.4",
     "serve-favicon": "^2.5.0",
+    "sqlite3": "^4.0.9",
     "supervisor": "^0.12.0"
   }
 }
