--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "super": "supervisor ./bin/www"
   },
   "dependencies": {
+    "connect-session-sequelize": "^6.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
