--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "super": "supervisor ./bin/www"
+    "super": "supervisor ./bin/www",
+    "test": "NODE_ENV=testing mocha -R spec"
   },
   "dependencies": {
     "connect-session-sequelize": "^6.0.0",
@@ -22,5 +23,9 @@
     "serve-favicon": "^2.5.0",
     "sqlite3": "^4.1.0",
     "supervisor": "^0.12.0"
+  },
+  "devDependencies": {
+    "mocha": "^6.1.4",
+    "zombie": "^6.1.4"
   }
 }
