--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "heroku local:start",
     "super": "supervisor ./bin/www",
+    "start_old": "node ./bin/www",
     "test": "NODE_ENV=testing mocha -R spec"
+  },
+  "engines": {
+    "node": "10.15.1",
+    "npm": "6.4.1"
   },
   "dependencies": {
     "connect-session-sequelize": "^6.0.0",
@@ -19,13 +24,14 @@
     "http-errors": "~1.6.3",
     "method-override": "^3.0.0",
     "morgan": "~1.9.1",
+    "pg": "^7.11.0",
     "sequelize": "^5.9.4",
     "serve-favicon": "^2.5.0",
-    "sqlite3": "^4.0.9",
     "supervisor": "^0.12.0"
   },
   "devDependencies": {
     "mocha": "^6.1.4",
+    "sqlite3": "^4.0.9",
     "zombie": "^6.1.4"
   }
 }
