--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "migrate_env": "sequelize db:migrate --url $DATABASE_URL",
     "seed_env": "sequelize db:seed:all --url $DATABASE_URL"
   },
+  "engines": {
+    "node": "^12.16.0",
+    "npm": "^6.13.4"
+  },
   "dependencies": {
     "connect-session-sequelize": "^6.1.1",
     "cookie-parser": "~1.4.4",
@@ -37,6 +41,7 @@
     "passport-linkedin-oauth2": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
+    "pg": "^8.0.3",
     "sequelize": "^5.21.5",
     "sequelize-cli": "^5.5.1",
     "serve-favicon": "^2.5.0",
