--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "node ./bin/www",
     "super": "supervisor ./bin/www",
-    "test": "NODE_ENV=testing mocha -R spec"
+    "test": "NODE_ENV=testing mocha -R spec",
+    "migrate": "sequelize db:migrate --url sqlite://$(pwd)/quiz.sqlite",
+    "seed": "sequelize db:seed:all --url sqlite://$(pwd)/quiz.sqlite"
   },
   "dependencies": {
     "connect-session-sequelize": "^6.0.0",
@@ -20,6 +22,7 @@
     "method-override": "^3.0.0",
     "morgan": "~1.9.1",
     "sequelize": "^5.21.2",
+    "sequelize-cli": "^5.5.0",
     "serve-favicon": "^2.5.0",
     "sqlite3": "^4.1.0",
     "supervisor": "^0.12.0"
