--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "npm": "6.4.1"
   },
   "dependencies": {
+    "cloudinary": "^1.14.0",
     "connect-session-sequelize": "^6.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -34,6 +35,7 @@
     "http-errors": "~1.6.3",
     "method-override": "^3.0.0",
     "morgan": "~1.9.1",
+    "multer": "^1.4.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg": "^7.11.0",
