--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express-partials": "^0.3.0",
     "express-session": "^1.16.2",
     "http-errors": "~1.6.3",
+    "js2xmlparser": "^4.0.0",
     "method-override": "^3.0.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.1",
