--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "http-errors": "~1.6.3",
     "method-override": "^3.0.0",
     "morgan": "~1.9.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pg": "^7.11.0",
     "sequelize": "^5.9.4",
     "sequelize-cli": "^5.5.0",
