--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "http-errors": "~1.6.3",
     "method-override": "^3.0.0",
     "morgan": "~1.9.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^5.21.2",
     "sequelize-cli": "^5.5.0",
     "serve-favicon": "^2.5.0",
