--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "npm": "^6.13.4"
   },
   "dependencies": {
+    "cloudinary": "^1.21.0",
     "connect-session-sequelize": "^6.1.1",
     "cookie-parser": "~1.4.4",
     "cookieconsent": "^3.1.1",
