--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "npm": "6.13.4"
   },
   "dependencies": {
+    "cloudinary": "^1.19.0",
     "connect-session-sequelize": "^6.0.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
