--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "method-override": "^3.0.0",
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
+    "passport-github2": "^0.1.11",
     "passport-local": "^1.0.0",
     "sequelize": "^5.21.5",
     "sequelize-cli": "^5.5.1",
